--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +8,40 @@
     <meta name="keywords" content="">
 
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>EARTH BABY!</title>
 </head>
+
 <body>
-    <header>Hello !</header>
-    main
+    <header>
+
+        <a href="index.html">
+            <h1>HEADER</h1>
+        </a>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#"></a>Signup</li>
+                <li><a href="#">Gallery</a>
+                    <ul><a href="#">SUBLINK1</a></ul>
+                    <ul><a href="#">SUBLINK2</a></ul>
+                </li>
+
+            </ul>
+        </nav>
+    </header>
+    <section>
+        <h2>main image</h2>
+    </section>
+    <section>
+        <h2>club ethos</h2>
+    </section>
+    <section>
+        <h2>contribution, well-being</h2>
+    </section>
+
+    <footer>
+        Social links etc.
+    </footer>
 </body>
+
 </html>
