Add google fonts and removed default margins, padding and borders

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#"></a>Signup</li>
-                <li><a href="#">Gallery</a>
+                <li><a href="#">Signup</a></li>
+                <li><a href="#">Explore</a>
                     <ul><a href="#">SUBLINK1</a></ul>
                     <ul><a href="#">SUBLINK2</a></ul>
                 </li>
