Add logo style and menu sublink hover function, structure for menu list

--- a/index.html
+++ b/index.html
@@ -8,29 +8,30 @@
     <meta name="keywords" content="">
 
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="icon" href="assets/images/icons8-earth-16.png" type="image/x-icon">
     <title>EARTH BABY!</title>
+
 </head>
 
 <body>
     <header>
 
         <a href="index.html">
-            <h1>HEADER</h1>
+            <h1 id="Logo">HEADER</h1>
         </a>
-        <nav>
+        <nav id="menu">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#">Signup</a></li>
                 <li><a href="#">Explore</a>
                     <ul><a href="#">SUBLINK1</a></ul>
                     <ul><a href="#">SUBLINK2</a></ul>
                 </li>
-
+                <li><a href="#">Signup</a></li>
+                <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
     </header>
     <section>
-        <h2>main image</h2>
+        <h2>Main image</h2>
     </section>
     <section>
         <h2>club ethos</h2>
@@ -40,7 +41,12 @@
     </section>
 
     <footer>
-        Social links etc.
+        <em>Social links etc. 
+        <a href="#">Facebook</a>
+        <a href="#">Instagram</a>
+        <a href="#">Twitter</a>
+        <a href="#">Youtube</a>
+        </em>
     </footer>
 </body>
 
