Style navigation links

--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
     <header>
 
         <a href="index.html">
-            <h1 id="Logo">HEADER</h1>
+            <h1 id="logo">Earth, A place called home.</h1>
         </a>
         <nav id="menu">
-            <ul>
+            <ul id="menu2">
                 <li><a href="#">Explore</a>
                     <ul><a href="#">SUBLINK1</a></ul>
                     <ul><a href="#">SUBLINK2</a></ul>
                 </li>
                 <li><a href="#">Signup</a></li>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
             </ul>
         </nav>
     </header>
     <section>
-        <h2>Main image</h2>
+        <h2>Main/Hero image</h2>
     </section>
     <section>
         <h2>club ethos</h2>
@@ -41,11 +41,11 @@
     </section>
 
     <footer>
-        <em>Social links etc. 
-        <a href="#">Facebook</a>
-        <a href="#">Instagram</a>
-        <a href="#">Twitter</a>
-        <a href="#">Youtube</a>
+        <em>Social links etc.
+            <a href="#">Facebook</a>
+            <a href="#">Instagram</a>
+            <a href="#">Twitter</a>
+            <a href="#">Youtube</a>
         </em>
     </footer>
 </body>
