--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="assets/images/icons8-earth-16.png" type="image/x-icon">
-    <title>EARTH BABY!</title>
 
+    <title>EARTH BABY!</title>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
             <h1 id="logo">Earth, A place called home.</h1>
         </a>
         <nav id="menu">
-            <ul id="menu2">
+            <ul>
                 <li><a href="#">Explore</a>
                     <ul><a href="#">SUBLINK1</a></ul>
                     <ul><a href="#">SUBLINK2</a></ul>
@@ -30,15 +30,17 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <h2>Main/Hero image</h2>
-    </section>
-    <section>
-        <h2>club ethos</h2>
-    </section>
-    <section>
-        <h2>contribution, well-being</h2>
-    </section>
+    <main>
+        <section id="hero-outer">
+            <div id="hero-image"></div>
+        </section>
+        <section>
+            <h2>Ethos</h2>
+        </section>
+        <section>
+            <h2>contribution</h2>
+        </section>
+    </main>
 
     <footer>
         <em>Social links etc.
