Add cover text and style

--- a/index.html
+++ b/index.html
@@ -33,6 +33,11 @@
     <main>
         <section id="hero-outer">
             <div id="hero-image"></div>
+            <div id="cover-text">
+                <h2>Earth</h2>
+                <h3>A place called home</h3>
+            </div>
+
         </section>
         <section>
             <h2>Ethos</h2>
