Add DidYouKnow main structure

--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 
 <body>
     <header>
-
-        <a href="index.html">
-            <h1 id="logo">Earth, A place called home.</h1>
-        </a>
+        <div id="wrap">
+            <a href="index.html">
+                <h1 id="logo">Earth, A place called home.</h1>
+            </a>
+        </div>
         <nav id="menu">
             <ul>
                 <li><a href="#">Explore</a>
@@ -32,15 +33,19 @@
     </header>
     <main>
         <section id="hero-outer">
-            <div id="hero-image"></div>
+            <div id="hero-img"></div>
             <div id="cover-text">
-                <h2>Earth</h2>
-                <h3>A place called home</h3>
+                <h2 id="earth-heading">Earth<img src="assets/images/icons8-earth-96 (1).png" alt="Globe" id="earth-pic">
+                </h2>
+                <h3>A place called home.</h3>
             </div>
 
         </section>
-        <section>
-            <h2>Ethos</h2>
+        <section id="didyouknow">
+            <h1>Did you know?</h1>
+            <div id="text-left-dyk">text-left</div>
+            <div id="text-right-dyk">text-right</div>
+            <div id="img-mid-dyk">img-mid</div>
         </section>
         <section>
             <h2>contribution</h2>
