--- a/index.html
+++ b/index.html
@@ -43,9 +43,31 @@
         </section>
         <section id="didyouknow">
             <h1>Did you know?</h1>
-            <div id="text-left-dyk">text-left</div>
-            <div id="text-right-dyk">text-right</div>
-            <div id="img-mid-dyk">img-mid</div>
+            <div id="left-txt-dyk">
+                <div class="left-dyk-heading">
+                    <h2>Our Planet</h2>
+                    <hr>
+                    <p>OUR PLANET TEXT OUR PLANET TEXT OUR PLANET TEXT OUR PLANET TEXT </p>
+                </div>
+                <div class="left-dyk-heading">
+                    <h2>Our Home</h2>
+                    <hr>
+                    <p>OUR HOME TXT OUR HOME OUR TXT HOME OUR HOME OUR TXT HOME OUR HOME </p>
+                </div>
+            </div>
+            <div id="right-txt-dyk">
+                <div class="right-dyk-heading">
+                    <h2>NO IDEA</h2>
+                    <hr>
+                    <p>NO IDEA TXT NO IDEA TXT NO IDEA TXT NO IDEA TXT </p>
+                </div>
+                <div class="right-dyk-heading">
+                    <h2>NO IDEA 2</h2>
+                    <hr>
+                    <p>NO IDEA TXT NO IDEA TXT NO IDEA TXT NO IDEA TXT</p>
+                </div>
+            </div>
+            <div id="mid-img-dyk"><div id="mid-dyk-pic"><img src="assets/images/spinoff-earth.avif" alt=""></div></div>
         </section>
         <section>
             <h2>contribution</h2>
