Add diffrent styles and effects to text, logo, and middle section

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
         </section>
         <section id="didyouknow">
-            <h1>Did you know?</h1>
+            <h2 id="dyk-heading">Did you know?</h2>
             <div id="left-txt-dyk">
                 <div class="left-dyk-heading">
-                    <h2>Our Planet</h2>
+                    <h2>Our Planet</h2> 
                     <hr>
                     <p>OUR PLANET TEXT OUR PLANET TEXT OUR PLANET TEXT OUR PLANET TEXT </p>
                 </div>
@@ -67,7 +67,11 @@
                     <p>NO IDEA TXT NO IDEA TXT NO IDEA TXT NO IDEA TXT</p>
                 </div>
             </div>
-            <div id="mid-img-dyk"><div id="mid-dyk-pic"><img src="assets/images/photo-1572202808998-93788f6d39da.avif" alt=""></div></div>
+            <div id="mid-img-dyk">
+                <div id="mid-dyk-pic"><img src="assets/images/photo-1572202808998-93788f6d39da.avif" alt="hej">
+                </div>
+              
+            </div>
         </section>
         <section>
             <h2>contribution</h2>
