Add font awesome icons to DIDYOUKNOW section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <div id="wrap">
+        <div>
             <a href="index.html">
                 <h1 id="logo">Earth, A place called home.</h1>
             </a>
@@ -42,29 +42,29 @@
 
         </section>
         <section id="didyouknow">
-            <h2 id="dyk-heading">Did you know?</h2>
+            <h2 id="dyk-heading">Did you know<i class="fa-regular fa-circle-question"></i></h2>
             <div id="left-txt-dyk">
                 <div class="left-dyk-heading">
-                    <h2>Our Planet</h2> 
+                    <h2>Our Planet <i class="fa-solid fa-earth-americas"></i></h2> 
                     <hr>
-                    <p>OUR PLANET TEXT OUR PLANET TEXT OUR PLANET TEXT OUR PLANET TEXT </p>
+                    <p>Short enlightening about our dear planet.</p>
                 </div>
                 <div class="left-dyk-heading">
-                    <h2>Our Home</h2>
+                    <h2>Our Home <i class="fa-solid fa-house"></i></h2>
                     <hr>
-                    <p>OUR HOME TXT OUR HOME OUR TXT HOME OUR HOME OUR TXT HOME OUR HOME </p>
+                    <p>some witty fun facts about our beloved home.</p>
                 </div>
             </div>
             <div id="right-txt-dyk">
                 <div class="right-dyk-heading">
-                    <h2>NO IDEA</h2>
+                    <h2><i class="fa-solid fa-explosion"></i> Make an impact</h2>
                     <hr>
-                    <p>NO IDEA TXT NO IDEA TXT NO IDEA TXT NO IDEA TXT </p>
+                    <p>your actions does affect your enviorenment. </p>
                 </div>
                 <div class="right-dyk-heading">
-                    <h2>NO IDEA 2</h2>
+                    <h2><i class="fa-solid fa-arrow-rotate-right"></i> The future </h2>
                     <hr>
-                    <p>NO IDEA TXT NO IDEA TXT NO IDEA TXT NO IDEA TXT</p>
+                    <p>Some positive 'bright in the tunnel' dream-giving ideas of solutions regarding our planets well-being.</p>
                 </div>
             </div>
             <div id="mid-img-dyk">
@@ -86,6 +86,13 @@
             <a href="#">Youtube</a>
         </em>
     </footer>
+
+    <!-- FONT AWESOME SCRIPT -->
+    <script src="https://kit.fontawesome.com/5d50d056d1.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
+
+
+
+
