Add basic structure to Thumb nail section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div>
             <a href="index.html">
-                <h1 id="logo">Earth, A place called home.</h1>
+                <h1 id="logo">Earth, A place called home</h1>
             </a>
         </div>
         <nav id="menu">
@@ -37,7 +37,7 @@
             <div id="cover-text">
                 <h2 id="earth-heading">Earth<img src="assets/images/icons8-earth-96 (1).png" alt="Globe" id="earth-pic">
                 </h2>
-                <h3>A place called home.</h3>
+                <h3 id="earth-heading">A place called home</h3>
             </div>
 
         </section>
@@ -45,7 +45,7 @@
             <h2 id="dyk-heading">Did you know<i class="fa-regular fa-circle-question"></i></h2>
             <div id="left-txt-dyk">
                 <div class="left-dyk-heading">
-                    <h2>Our Planet <i class="fa-solid fa-earth-americas"></i></h2> 
+                    <h2>Our Planet <i class="fa-solid fa-earth-americas"></i></h2>
                     <hr>
                     <p>Short enlightening about our dear planet.</p>
                 </div>
@@ -64,17 +64,43 @@
                 <div class="right-dyk-heading">
                     <h2><i class="fa-solid fa-arrow-rotate-right"></i> The future </h2>
                     <hr>
-                    <p>Some positive 'bright in the tunnel' dream-giving ideas of solutions regarding our planets well-being.</p>
+                    <p>Some positive ->'bright in the tunnel'-> dream-giving ideas, and  solutions for our planets  future</p>
                 </div>
             </div>
             <div id="mid-img-dyk">
                 <div id="mid-dyk-pic"><img src="assets/images/photo-1572202808998-93788f6d39da.avif" alt="hej">
                 </div>
-              
+
             </div>
         </section>
-        <section>
-            <h2>contribution</h2>
+        <section id="thumb-outer">
+            <div>
+                <h2>EARTH DAY</h2>
+                <h4>Calender that shows Earth-day?</h4>
+                <h3>2</h3>
+                <h3>3</h3>
+            </div>
+            <div>
+                <h2>Next</h2>
+                <h3>1</h3>
+                <h3>2</h3>
+                <h3>3</h3>
+                <h3>4</h3>
+            </div>
+            <div>
+                <h2>EARTH DAY</h2>
+                <h3>1</h3>
+                <h3>2</h3>
+                <h3>3</h3>
+                <h3>4</h3>
+            </div>
+            <div>
+                <h2>EARTH DAY</h2>
+                <h3>1</h3>
+                <h3>2</h3>
+                <h3>3</h3>
+                <h3>4</h3>
+            </div>
         </section>
     </main>
 
@@ -92,7 +118,3 @@
 </body>
 
 </html>
-
-
-
-
