Add background-image to thumbnail section

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
             </div>
         </section>
-        <section id="thumb-outer">
+        <section id="thumb-bg">
             <div>
                 <h2>EARTH DAY</h2>
                 <h4>Calender that shows Earth-day?</h4>
