Add new styles to previous content and thumbnail section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <header>
         <div>
             <a href="index.html">
-                <h1 id="logo">Earth, A place called home</h1>
+                <h1 id="logo">Earth, A place called home<i class="fa fa-globe"
+                        style="color:rgb(4, 153, 252); font-size: medium;" aria-hidden="true"></i></h1>
             </a>
         </div>
         <nav id="menu">
@@ -42,7 +43,7 @@
 
         </section>
         <section id="didyouknow">
-            <h2 id="dyk-heading">Did you know<i class="fa-regular fa-circle-question"></i></h2>
+            <h2 id="dyk-heading">Did you know?</h2>
             <div id="left-txt-dyk">
                 <div class="left-dyk-heading">
                     <h2>Our Planet <i class="fa-solid fa-earth-americas"></i></h2>
@@ -64,7 +65,8 @@
                 <div class="right-dyk-heading">
                     <h2><i class="fa-solid fa-arrow-rotate-right"></i> The future </h2>
                     <hr>
-                    <p>Some positive ->'bright in the tunnel'-> dream-giving ideas, and  solutions for our planets  future</p>
+                    <p>Some positive ->'bright in the tunnel'-> dream-giving ideas, and solutions for our planets future
+                    </p>
                 </div>
             </div>
             <div id="mid-img-dyk">
@@ -75,31 +77,31 @@
         </section>
         <section id="thumb-bg">
             <div>
-                <h2>EARTH DAY</h2>
+                <h2>EARTH DAY<i class="fa-solid fa-earth-oceania"></i></h2>
                 <h4>Calender that shows Earth-day?</h4>
-                <h3>2</h3>
-                <h3>3</h3>
+                <h4>asdf</h4>
+                <h4>asdf</h4>
             </div>
             <div>
-                <h2>Next</h2>
-                <h3>1</h3>
-                <h3>2</h3>
-                <h3>3</h3>
-                <h3>4</h3>
+                <h2>Next<i class="fa-solid fa-earth-europe"></i></h4>
+                    <h4>asdf</h4>
+                    <h4>adsf</h4>
+                    <h4>asdf</h4>
+                    <h4>asdf</h4>
             </div>
             <div>
-                <h2>EARTH DAY</h2>
-                <h3>1</h3>
-                <h3>2</h3>
-                <h3>3</h3>
-                <h3>4</h3>
+                <h2>EARTH DAY<i class="fa-solid fa-earth-americas"></i></h2>
+                <h4>asdf</h4>
+                <h4>asdf</h4>
+                <h4>asdf</h4>
+                <h4>asdf</h4>
             </div>
             <div>
-                <h2>EARTH DAY</h2>
-                <h3>1</h3>
-                <h3>2</h3>
-                <h3>3</h3>
-                <h3>4</h3>
+                <h2>EARTH DAY<i class="fa-solid fa-hand-holding-hand"></i></h2>
+                <h4>asdf</h4>
+                <h4>asdf</h4>
+                <h4>asdf</h4>
+                <h4>asdf</h4>
             </div>
         </section>
     </main>
