Add icons to social media with structure and additional style to same section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <section id="thumb-bg">
             <div>
                 <h2>EARTH DAY<i class="fa-solid fa-earth-oceania"></i></h2>
-                <h4>Calender that shows Earth-day?</h4>
+                <h4>Equinox Solar Calender?!</h4>
                 <h4>asdf</h4>
                 <h4>asdf</h4>
             </div>
@@ -107,13 +107,14 @@
     </main>
 
     <footer>
-        <em>Social links etc.
-            <a href="#">Facebook</a>
-            <a href="#">Instagram</a>
-            <a href="#">Twitter</a>
-            <a href="#">Youtube</a>
-        </em>
-    </footer>
+        <div id="footer-header">
+            <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook! (opens in new tab)"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+            <a href="https://instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram! (opens in new tab)"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            <a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="Visit our Twitter! (opens in new tab)"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <a href="https://youtube.com/" target="_blank" rel="noopener" aria-label="Visit our Youtube! (opens in new tab)"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+        
+        </div>
+        </footer>
 
     <!-- FONT AWESOME SCRIPT -->
     <script src="https://kit.fontawesome.com/5d50d056d1.js" crossorigin="anonymous"></script>
