Add signup form to signup page, with style. Adjusted some synthax, and design styles changes

--- a/index.html
+++ b/index.html
@@ -17,18 +17,17 @@
     <header>
         <div>
             <a href="index.html">
-                <h1 id="logo">Earth, A place called home<i class="fa fa-globe"
-                        style="color:rgb(4, 153, 252); font-size: medium;" aria-hidden="true"></i></h1>
+                <h1 id="logo">Earth, A place called home<i class="fa fa-globe" aria-hidden="true" style="font-size:large;"></i></h1>
             </a>
         </div>
         <nav id="menu">
             <ul>
-                <li><a href="#">Explore</a>
-                    <ul><a href="#">SUBLINK1</a></ul>
+                <li><a href="explore.html" class="active">Explore</a>
+                    <ul><a href="sublink1.html">SUBLINK1</a></ul>
                     <ul><a href="#">SUBLINK2</a></ul>
                 </li>
-                <li><a href="#">Signup</a></li>
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="signup.html">Signup</a></li>
+                <li><a href="index.html">Home</a></li>
             </ul>
         </nav>
     </header>
@@ -77,11 +76,12 @@
         </section>
         <section id="thumb-bg">
             <div>
-                <h2>EARTH DAY<i class="fa-solid fa-earth-oceania"></i></h2>
-                <h4>Equinox Solar Calender?!</h4>
-                <h4>asdf</h4>
-                <h4>asdf</h4>
-            </div>
+                <h2>Equinox<i class="fa-solid fa-earth-oceania"></i></h2>
+                <h4>An equinox is an event in which a planet's subsolar point passes through its Equator. The equinoxes
+                    are the only time when both the Northern and Southern Hemisphere experience roughly equal amounts of
+                    daytime and nighttime.</h4>
+               
+ </div>
             <div>
                 <h2>Next<i class="fa-solid fa-earth-europe"></i></h4>
                     <h4>asdf</h4>
@@ -108,13 +108,19 @@
 
     <footer>
         <div id="footer-header">
-            <a href="https://facebook.com/" target="_blank" rel="noopener" aria-label="Visit our Facebook! (opens in new tab)"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-            <a href="https://instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram! (opens in new tab)"><i class="fa fa-instagram" aria-hidden="true"></i></a>
-            <a href="https://twitter.com/" target="_blank" rel="noopener" aria-label="Visit our Twitter! (opens in new tab)"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-            <a href="https://youtube.com/" target="_blank" rel="noopener" aria-label="Visit our Youtube! (opens in new tab)"><i class="fa fa-youtube" aria-hidden="true"></i></a>
-        
+            <a href="https://facebook.com/" target="_blank" rel="noopener"
+                aria-label="Visit our Facebook! (opens in new tab)"><i class="fa fa-facebook"
+                    aria-hidden="true"></i></a>
+            <a href="https://instagram.com/" target="_blank" rel="noopener"
+                aria-label="Visit our Instagram! (opens in new tab)"><i class="fa fa-instagram"
+                    aria-hidden="true"></i></a>
+            <a href="https://twitter.com/" target="_blank" rel="noopener"
+                aria-label="Visit our Twitter! (opens in new tab)"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+            <a href="https://youtube.com/" target="_blank" rel="noopener"
+                aria-label="Visit our Youtube! (opens in new tab)"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+
         </div>
-        </footer>
+    </footer>
 
     <!-- FONT AWESOME SCRIPT -->
     <script src="https://kit.fontawesome.com/5d50d056d1.js" crossorigin="anonymous"></script>
