Add href links to diff pages, Add content and styles to Explore page

--- a/explore.html
+++ b/explore.html
@@ -14,54 +14,45 @@
 </head>
 
 <body>
-    <header>
-        <div>
-            <a href="index.html">
-                <h1 id="logo">Earth, A place called home<i class="fa fa-globe"
-                        style="color:rgb(4, 153, 252); font-size: medium;" aria-hidden="true"></i></h1>
-            </a>
-        </div>
-        <nav id="menu">
-            <ul>
-                <li><a class="active" href="explore.html">Explore</a>
-                    <ul><a href="sublink1.html">SUBLINK1</a></ul>
-                    <ul><a href="#">SUBLINK2</a></ul>
-                </li>
-                <li><a href="signup.html">Signup</a></li>
-                <li><a href="index.html">Home</a></li>
-            </ul>
-        </nav>
+
+    </main>
+
+    <div>
+        <a href="index.html">
+            <h1 id="logo">Earth, A place called home<i class="fa fa-globe"
+                    style="color:rgb(4, 153, 252); font-size: medium;" aria-hidden="true"></i></h1>
+        </a>
+    </div>
+    <nav id="menu">
+        <ul>
+            <li><a class="active" href="explore.html">Explore</a>
+                <ul><a href="sublink1.html">SUBLINK1</a></ul>
+                <ul><a href="#">SUBLINK2</a></ul>
+            </li>
+            <li><a href="signup.html">Signup</a></li>
+            <li><a href="index.html">Home</a></li>
+        </ul>
+    </nav>
     </header>
 
-    <section id="thumb-bg">
-        <div>
-            <h2>EARTH DAY<i class="fa-solid fa-earth-oceania"></i></h2>
-            <h4>Equinox Solar Calender?!</h4>
-            <h4>asdf</h4>
-            <h4>asdf</h4>
-        </div>
-        <div>
-            <h2>Next<i class="fa-solid fa-earth-europe"></i></h4>
-                <h4>asdf</h4>
-                <h4>adsf</h4>
-                <h4>asdf</h4>
-                <h4>asdf</h4>
-        </div>
-        <div>
-            <h2>EARTH DAY<i class="fa-solid fa-earth-americas"></i></h2>
-            <h4>asdf</h4>
-            <h4>asdf</h4>
-            <h4>asdf</h4>
-            <h4>asdf</h4>
-        </div>
-        <div>
-            <h2>EARTH DAY<i class="fa-solid fa-hand-holding-hand"></i></h2>
-            <h4>asdf</h4>
-            <h4>asdf</h4>
-            <h4>asdf</h4>
-            <h4>asdf</h4>
-        </div>
-    </section>
+    <main>
+        <section id="explore-photos">
+
+            <img src="assets/images/nasa-vhSz50AaFAs-unsplash.jpg" alt="satelite picture of the planet earth">
+
+            <img src="assets/images/louis-maniquet-71QXQUSC_Do-unsplash.jpg"
+                alt="Raindrop with a reflection of the background">
+
+            <img src="assets/images/saketh-garuda-SHY-CKpYjrE-unsplash (1).jpg" alt="glowing earth globe">
+            <img src="assets/images/spinoff-earth.avif" alt="360degree panorama picture of the Earth">
+            <img src="assets/images/tolga-ahmetler-c4TxtLTHtlo-unsplash.jpg" alt="a picture of the clouds from above">
+            <img src="assets/images/photo-1534294228306-bd54eb9a7ba8 (1).avif" alt="Earth from above">
+
+        </section>
+
+        </header>
+
+        </section>
     </main>
 
     <footer>
