--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="keywords" content="earth, place called home, home, planet, gaya, equinox">
 
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="icon" href="assets/images/icons8-earth-16.png" type="image/x-icon">
