Added changes to style and mid image

--- a/index.html
+++ b/index.html
@@ -47,29 +47,40 @@
                 <div class="left-dyk-heading">
                     <h2>Our Planet <i class="fa-solid fa-earth-americas"></i></h2>
                     <hr>
-                    <p>Short enlightening about our dear planet.</p>
+                    <p>Earth, our home planet. The third planet from the sun, with a radius of 3,959 miles. 
+                        Earth is the fifth largest planet in our solar system and the only confirmed place in the univerese to host life.
+                                        </p>
                 </div>
                 <div class="left-dyk-heading">
                     <h2>Our Home <i class="fa-solid fa-house"></i></h2>
                     <hr>
-                    <p>some witty fun facts about our beloved home.</p>
+                    <p>Our home is a complex planet dependent on multiple ecosystems, from the biosphere to the microhabitats
+                        we are all connected and bound with a responsibility to contribute to a better world to leave behind.
+                        
+                    </p>
                 </div>
             </div>
             <div id="right-txt-dyk">
                 <div class="right-dyk-heading">
                     <h2><i class="fa-solid fa-explosion"></i> Make an impact</h2>
                     <hr>
-                    <p>your actions does affect your enviorenment. </p>
+                    <p>Impact is a big word, but not necessarily a big action.
+                        <br>
+                        <br>
+                        <li><em>Turn the tap of when your brushing your teeth.</em></li>
+                    <li><em>Go vegetarian for a day, not only for the sake of the planet but also your health.</em></li>
+                    <li><em>Plant a tree.</em></li>
+                </p>
                 </div>
                 <div class="right-dyk-heading">
                     <h2><i class="fa-solid fa-arrow-rotate-right"></i> The future </h2>
                     <hr>
-                    <p>Some positive ->'bright in the tunnel'-> dream-giving ideas, and solutions for our planets future
+                    <p>Future changes are expected to include a warmer atmosphere, a warmer and more acidic ocean, higher sea levels, and larger changes in precipitation patterns. The extent of future climate change depends on what we do now to reduce greenhouse gas emissions. The more we emit, the larger future changes will be.
                     </p>
                 </div>
             </div>
             <div id="mid-img-dyk">
-                <div id="mid-dyk-pic"><img src="assets/images/photo-1572202808998-93788f6d39da.avif" alt="hej">
+                <video  type="video/mp4" src="assets/images/movie/vecteezy_the-earth-with-environment-ecology-sign-hologram-on-natural_5166764 (1)_compressed.mp4" autoplay muted></video>
                 </div>
 
             </div>
@@ -80,6 +91,8 @@
                 <h4>An equinox is an event in which a planet's subsolar point passes through its Equator. The equinoxes
                     are the only time when both the Northern and Southern Hemisphere experience roughly equal amounts of
                     daytime and nighttime.</h4>
+                    <h2><strong>Next event:<br>
+                        2024 / 03 / 20 @ 05:06 CEST.</strong></h2>
                
  </div>
             <div>
