--- a/index.html
+++ b/index.html
@@ -2,141 +2,145 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="keywords" content="earth, place called home, home, planet, gaya, equinox">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="">
+  <meta name="keywords" content="earth, place called home, home, planet, gaya, equinox">
 
-    <link rel="stylesheet" href="assets/css/style.css">
-    <link rel="icon" href="assets/images/icons8-earth-16.png" type="image/x-icon">
+  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="icon" href="assets/images/icons8-earth-16.png" type="image/x-icon">
 
-    <title>EARTH BABY!</title>
+  <title>EARTH BABY!</title>
 </head>
 
 <body>
-    <header>
-        <div>
-            <a href="index.html">
-                <h1 id="logo">Earth, A place called home<i class="fa fa-globe" aria-hidden="true" style="font-size:large;"></i></h1>
-            </a>
+  <header>
+    <div>
+      <a href="index.html">
+        <h1 id="logo">Earth, A place called home<i class="fa fa-globe" aria-hidden="true" style="font-size:large;"></i>
+        </h1>
+      </a>
+    </div>
+    <nav id="menu">
+      <ul>
+        <li><a href="explore.html" class="active">Explore</a>
+          <ul><a href="sublink1.html">SUBLINK1</a></ul>
+          <ul><a href="#">SUBLINK2</a></ul>
+        </li>
+        <li><a href="signup.html">Signup</a></li>
+        <li><a href="index.html">Home</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section id="hero-outer">
+      <div id="hero-img"></div>
+      <div id="cover-text">
+        <h2 id="earth-heading">Earth<img src="assets/images/icons8-earth-96 (1).png" alt="Globe" id="earth-pic">
+        </h2>
+        <h3 id="earth-heading">A place called home</h3>
+      </div>
+
+    </section>
+    <section id="didyouknow">
+      <h2 id="dyk-heading">Did you know?</h2>
+      <div id="left-txt-dyk">
+        <div class="left-dyk-heading">
+          <h2>Our Planet <i class="fa-solid fa-earth-americas"></i></h2>
+          <hr>
+          <p>Earth, our home planet. The third planet from the sun, with a radius of 3,959 miles.
+            Earth is the fifth largest planet in our solar system and the only confirmed place in the univerese to host
+            life.
+          </p>
         </div>
-        <nav id="menu">
-            <ul>
-                <li><a href="explore.html" class="active">Explore</a>
-                    <ul><a href="sublink1.html">SUBLINK1</a></ul>
-                    <ul><a href="#">SUBLINK2</a></ul>
-                </li>
-                <li><a href="signup.html">Signup</a></li>
-                <li><a href="index.html">Home</a></li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section id="hero-outer">
-            <div id="hero-img"></div>
-            <div id="cover-text">
-                <h2 id="earth-heading">Earth<img src="assets/images/icons8-earth-96 (1).png" alt="Globe" id="earth-pic">
-                </h2>
-                <h3 id="earth-heading">A place called home</h3>
-            </div>
+        <div class="left-dyk-heading">
+          <h2>Our Home <i class="fa-solid fa-house"></i></h2>
+          <hr>
+          <p>Our home is a complex planet dependent on multiple ecosystems, from the biosphere to the microhabitats
+            we are all connected and bound with a responsibility to contribute to a better world to leave behind.
 
-        </section>
-        <section id="didyouknow">
-            <h2 id="dyk-heading">Did you know?</h2>
-            <div id="left-txt-dyk">
-                <div class="left-dyk-heading">
-                    <h2>Our Planet <i class="fa-solid fa-earth-americas"></i></h2>
-                    <hr>
-                    <p>Earth, our home planet. The third planet from the sun, with a radius of 3,959 miles. 
-                        Earth is the fifth largest planet in our solar system and the only confirmed place in the univerese to host life.
-                                        </p>
-                </div>
-                <div class="left-dyk-heading">
-                    <h2>Our Home <i class="fa-solid fa-house"></i></h2>
-                    <hr>
-                    <p>Our home is a complex planet dependent on multiple ecosystems, from the biosphere to the microhabitats
-                        we are all connected and bound with a responsibility to contribute to a better world to leave behind.
-                        
-                    </p>
-                </div>
-            </div>
-            <div id="right-txt-dyk">
-                <div class="right-dyk-heading">
-                    <h2><i class="fa-solid fa-explosion"></i> Make an impact</h2>
-                    <hr>
-                    <p>Impact is a big word, but not necessarily a big action.
-                        <br>
-                        <br>
-                        <li><em>Turn the tap of when your brushing your teeth.</em></li>
-                    <li><em>Go vegetarian for a day, not only for the sake of the planet but also your health.</em></li>
-                    <li><em>Plant a tree.</em></li>
-                </p>
-                </div>
-                <div class="right-dyk-heading">
-                    <h2><i class="fa-solid fa-arrow-rotate-right"></i> The future </h2>
-                    <hr>
-                    <p>Future changes are expected to include a warmer atmosphere, a warmer and more acidic ocean, higher sea levels, and larger changes in precipitation patterns. The extent of future climate change depends on what we do now to reduce greenhouse gas emissions. The more we emit, the larger future changes will be.
-                    </p>
-                </div>
-            </div>
-            <div id="mid-img-dyk">
-                <video  type="video/mp4" src="assets/images/movie/vecteezy_the-earth-with-environment-ecology-sign-hologram-on-natural_5166764 (1)_compressed.mp4" autoplay muted></video>
-                </div>
-
-            </div>
-        </section>
-        <section id="thumb-bg">
-            <div>
-                <h2>Equinox<i class="fa-solid fa-earth-oceania"></i></h2>
-                <h4>An equinox is an event in which a planet's subsolar point passes through its Equator. The equinoxes
-                    are the only time when both the Northern and Southern Hemisphere experience roughly equal amounts of
-                    daytime and nighttime.</h4>
-                    <h2><strong>Next event:<br>
-                        2024 / 03 / 20 @ 05:06 CEST.</strong></h2>
-               
- </div>
-            <div>
-                <h2>Next<i class="fa-solid fa-earth-europe"></i></h4>
-                    <h4>asdf</h4>
-                    <h4>adsf</h4>
-                    <h4>asdf</h4>
-                    <h4>asdf</h4>
-            </div>
-            <div>
-                <h2>EARTH DAY<i class="fa-solid fa-earth-americas"></i></h2>
-                <h4>asdf</h4>
-                <h4>asdf</h4>
-                <h4>asdf</h4>
-                <h4>asdf</h4>
-            </div>
-            <div>
-                <h2>EARTH DAY<i class="fa-solid fa-hand-holding-hand"></i></h2>
-                <h4>asdf</h4>
-                <h4>asdf</h4>
-                <h4>asdf</h4>
-                <h4>asdf</h4>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div id="footer-header">
-            <a href="https://facebook.com/" target="_blank" rel="noopener"
-                aria-label="Visit our Facebook! (opens in new tab)"><i class="fa fa-facebook"
-                    aria-hidden="true"></i></a>
-            <a href="https://instagram.com/" target="_blank" rel="noopener"
-                aria-label="Visit our Instagram! (opens in new tab)"><i class="fa fa-instagram"
-                    aria-hidden="true"></i></a>
-            <a href="https://twitter.com/" target="_blank" rel="noopener"
-                aria-label="Visit our Twitter! (opens in new tab)"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-            <a href="https://youtube.com/" target="_blank" rel="noopener"
-                aria-label="Visit our Youtube! (opens in new tab)"><i class="fa fa-youtube" aria-hidden="true"></i></a>
-
+          </p>
         </div>
-    </footer>
+      </div>
+      <div id="right-txt-dyk">
+        <div class="right-dyk-heading">
+          <h2><i class="fa-solid fa-explosion"></i> Make an impact</h2>
+          <hr>
+          <p>Impact is a big word, but not necessarily a big action.
+            <br>
+            <br>
+            <li><em>Turn the tap of when your brushing your teeth.</em></li>
+            <li><em>Go vegetarian for a day, not only for the sake of the planet but also your health.</em></li>
+            <li><em>Plant a tree.</em></li>
+          </p>
+        </div>
+        <div class="right-dyk-heading">
+          <h2><i class="fa-solid fa-arrow-rotate-right"></i> The future </h2>
+          <hr>
+          <p>Future changes are expected to include a warmer atmosphere, a warmer and more acidic ocean, higher sea
+            levels, and larger changes in precipitation patterns. The extent of future climate change depends on what we
+            do now to reduce greenhouse gas emissions. The more we emit, the larger future changes will be.
+          </p>
+        </div>
+      </div>
+      <div id="mid-img-dyk">
+        <video type="video/mp4"
+          src="assets/images/movie/vecteezy_the-earth-with-environment-ecology-sign-hologram-on-natural_5166764 (1)_compressed.mp4"
+          autoplay muted></video>
+      </div>
 
-    <!-- FONT AWESOME SCRIPT -->
-    <script src="https://kit.fontawesome.com/5d50d056d1.js" crossorigin="anonymous"></script>
+      </div>
+    </section>
+    <section id="thumb-bg">
+      <div class="testing">
+        <h2>Equinox<i class="fa-solid fa-earth-oceania"></i></h2>
+        <h4>An equinox is an event in which a planet's subsolar point passes through its Equator. The equinoxes
+          are the only time when both the Northern and Southern Hemisphere experience roughly equal amounts of
+          daytime and nighttime.</h4>
+        <h2><strong>Next event:<br>
+            2024 / 03 / 20 @ 05:06 CEST.</strong></h2>
+
+      </div>
+      <div class="testing">
+        <h2>Next<i class="fa-solid fa-earth-europe"></i></h4>
+          <h4>asdf</h4>
+          <h4>adsf</h4>
+          <h4>asdf</h4>
+          <h4>asdf</h4>
+      </div>
+      <div class="testing">
+        <h2>EARTH DAY<i class="fa-solid fa-earth-americas"></i></h2>
+        <h4>asdf</h4>
+        <h4>asdf</h4>
+        <h4>asdf</h4>
+        <h4>asdf</h4>
+      </div>
+      <div class="testing">
+        <h2>EARTH DAY<i class="fa-solid fa-hand-holding-hand"></i></h2>
+        <h4>asdf</h4>
+        <h4>asdf</h4>
+        <h4>asdf</h4>
+        <h4>asdf</h4>
+      </div>
+    </section>
+  </main>
+
+  <footer>
+    <div id="footer-header">
+      <a href="https://facebook.com/" target="_blank" rel="noopener"
+        aria-label="Visit our Facebook! (opens in new tab)"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+      <a href="https://instagram.com/" target="_blank" rel="noopener"
+        aria-label="Visit our Instagram! (opens in new tab)"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+      <a href="https://twitter.com/" target="_blank" rel="noopener"
+        aria-label="Visit our Twitter! (opens in new tab)"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+      <a href="https://youtube.com/" target="_blank" rel="noopener"
+        aria-label="Visit our Youtube! (opens in new tab)"><i class="fa fa-youtube" aria-hidden="true"></i></a>
+
+    </div>
+  </footer>
+
+  <!-- FONT AWESOME SCRIPT -->
+  <script src="https://kit.fontawesome.com/5d50d056d1.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
